<resources>
    <string name="app_name">Atividades</string>


    <string name="zero">0</string>
    <string name="um">1</string>
    <string name="dois">2</string>
    <string name="três">3</string>
    <string name="quatro">4</string>
    <string name="cinco">5</string>
    <string name="seis">6</string>
    <string name="sete">7</string>
    <string name="oito">8</string>
    <string name="nove">9</string>

    <string name="limpar">C</string>
    <string name="somar">+</string>
    <string name="subtrair">-</string>
    <string name="multiplicar">*</string>
    <string name="dividir">/</string>
    <string name="potência">^</string>
    <string name="ponto">.</string>
    <string name="igual">=</string>
    <string name="parentese1">(</string>
    <string name="parentese2">)</string>


    <string name="mostrar">entre com um número</string>

    <string name="telaInicial">The fifth Element</string>
    <string name="botaoComecar">Começar a batalha</string>

    <string name="escolherDominador">Dê nomes aos dominadores:</string>
    <string name="NomeD1">Primeiro Dominador (Você)</string>
    <string name="nomeD2">Segundo Dominador</string>
    <string name="botaoOk">Continuar</string>
    <string name="nomeTexto">Insira um nome</string>

    <string name="Recomecar">Jogar novamente</string>
    <string name="inicio">Início</string>

</resources>