<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#AF8E99"
    tools:context=".calculadora.CalActivity">

    <TableLayout
        android:layout_width="389dp"
        android:layout_height="376dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtOperacao"
        app:layout_constraintVertical_bias="1.0">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btLimpar"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/botoescal"
                android:text="@string/limpar" />

            <Button
                android:id="@+id/btParentese"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/botoescal"
                android:text="@string/parentese" />

            <Button
                android:id="@+id/btPorcento"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/botoescal"
                android:text="@string/porcento" />

            <Button
                android:id="@+id/btDividir"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/botoescal"
                android:text="@string/dividir" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btSete"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/botoescal"
                android:text="@string/sete" />

            <Button
                android:id="@+id/btOito"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/botoescal"
                android:text="@string/oito" />

            <Button
                android:id="@+id/btNove"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/botoescal"
                android:text="@string/nove" />

            <Button
                android:id="@+id/btProduto"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/botoescal"
                android:text="@string/multiplicar" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btQuatro"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/botoescal"
                android:text="@string/quatro" />

            <Button
                android:id="@+id/btCinco"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/botoescal"
                android:text="@string/cinco" />

            <Button
                android:id="@+id/btSeis"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/botoescal"
                android:text="@string/seis" />

            <Button
                android:id="@+id/btSub"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/botoescal"
                android:text="@string/subtrair" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btUm"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/botoescal"
                android:text="@string/um" />

            <Button
                android:id="@+id/btDois"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/botoescal"
                android:text="@string/dois" />

            <Button
                android:id="@+id/btTres"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/botoescal"
                android:text="@string/três" />

            <Button
                android:id="@+id/btSoma"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/botoescal"
                android:text="@string/somar" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btExpoente"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/botoescal"
                android:text="@string/potência" />

            <Button
                android:id="@+id/btZero"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/botoescal"
                android:text="@string/zero" />

            <Button
                android:id="@+id/btPonto"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/botoescal"
                android:text="@string/ponto" />

            <Button
                android:id="@+id/btIgual"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/botoescal"
                android:text="@string/igual" />
        </TableRow>

    </TableLayout>

    <EditText
        android:id="@+id/txtOperacao"
        android:layout_width="384dp"
        android:layout_height="54dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtResultado" />

    <TextView
        android:id="@+id/txtResultado"
        android:layout_width="379dp"
        android:layout_height="52dp"
        android:layout_marginTop="32dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>